--- a/package.json
+++ b/package.json
@@ -1,3 +1,23 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "dpworld-helloapp",
+  "version": "1.0.0",
+  "description": "Simple Node.js Express app for Azure App Service training (DP World)",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "keywords": [
+    "azure",
+    "express",
+    "training",
+    "app-service"
+  ],
+  "author": "Elias Waly Ba",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18.x"
+  }
 }
